added details page ui

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
   font-family: system-ui, sans-serif;
-  /* background: #fffaf2; */
+  background: #0e1116;
   color: #222;
 }
