--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,6 +13,48 @@
   border-bottom: 0.25px solid #00000033;
 }
 
+.header-one {
+  position: sticky;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: stretch;
+  background: #ffffff;
+  border-bottom: 0.25px solid #00000033;
+  width: 100%;
+  z-index: 50;
+  padding: 14px clamp(12px, 3vw, 22px);
+}
+
+.header-one-container {
+  height: 40px;
+  justify-content: space-between;
+  max-width: 640px;
+  position: relative;
+  width: 100%;
+  align-items: center;
+  align-self: stretch;
+  display: flex;
+}
+
+.go-back {
+  border-radius: 50%;
+  background: #f2f2f7;
+  border: none;
+  border-radius: 50%;
+  color: #000;
+  height: 40px;
+  justify-content: center;
+  position: relative;
+  text-decoration: none;
+  width: 40px;
+}
+
+.go-back:hover {
+  background: #0003;
+}
+
 h1 {
   color: #fd6632;
   font-size: 1.5rem;
